tests/examples/fail/sorts/arg_count_mismatch.fly
# Copyright 2022-2023 VMware, Inc.
# SPDX-License-Identifier: BSD-2-Clause

sort s
mutable r(s): bool

assert forall x:s. r(x, false)
